---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type b : enum(a) for _ : b end for"
---
"b"@"src/main.t:5..6" [Type]: enum[DefId(PackageId(3072), LocalDefId(1))] ( "a"@SpanId(4), )
"b"@"src/main.t:9..16" [Enum]: <error>
"a"@"src/main.t:14..15" [EnumVariant]: enum[DefId(PackageId(3072), LocalDefId(1))] ( "a"@SpanId(4), )
"_"@"src/main.t:21..22" [ConstVar(Const, No)]: enum[DefId(PackageId(3072), LocalDefId(1))] ( "a"@SpanId(4), )
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
